--- a/config.ini
+++ b/config.ini
@@ -8,5 +8,5 @@ SCHEMA = cql/schema.cql
 
 [DATA]
 GAMES_CSV = raw/games.csv
-GAME_DETAILS_CSV = raw/game_details.csv
+GAMES_DETAILS_CSV = raw/games_details.csv
 TEAMS_CSV = raw/teams.csv
